# revonslang

./: .clog.toml  .travis.yml  Cargo.toml  LICENCE  README.md  appveyor.yml  build.rs  revons.py
.github/workflows/: codacy.yml
base/: Cargo.toml
base/src/: ast.rs  error.rs  fixed.rs  fnv.rs  kind.rs  lib.rs  macros.rs  merge.rs  metadata.rs  pos.rs  resolve.rs  scoped_map.rs  serialization.rs  source.rs  symbol.rs
base/src/types/: mod.rs  pretty_print.rs
base/tests/: compiletest.rs  types.rs
base/tests/compile-fail/: arena-1.rs  arena-2.rs
benches/: check.rs  function_call.rs  precompiled.rs
c-api/: Cargo.toml
c-api/src/: lib.rs
check/: Cargo.toml
check/src/: implicits.rs  kindcheck.rs  lib.rs  metadata.rs  recursion_check.rs  rename.rs  substitution.rs  typ.rs  typecheck.rs  unify.rs  unify_type.rs
check/src/typecheck/: error.rs  generalize.rs  mod_type.rs
check/tests/: effect.rs  error_recovery.rs  fail.rs  forall.rs  gadt.rs  implicits.rs  metadata.rs  pass.rs  recursive.rs  row_polymorphism.rs  stack_overflow.rs  type_projection.rs
check/tests/support/: mod.rs
codegen/: Cargo.toml
codegen/src/: arena_clone.rs  ast_clone.rs  attr.rs  functor.rs  getable.rs  lib.rs  pushable.rs  shared.rs  trace.rs  userdata.rs  vm_type.rs
codegen/tests/: derive_getable.rs  derive_pushable.rs  derive_userdata.rs  derive_vm_type.rs  full.rs
codegen/tests/init/: mod.rs
completion/: Cargo.toml
completion/src/: lib.rs
completion/tests/: completion.rs  metadata.rs  signature_help.rs  suggest.rs
completion/tests/support/: mod.rs
doc/: Cargo.toml  build.rs
doc/src/: lib.rs  main.rs
doc/tests/: doc.rs
examples/: fib.rs  marshalling.rs
examples/http/: main.rs
examples/lisp/: main.rs
format/: Cargo.toml
format/src/: lib.rs  pretty_print.rs
format/tests/: pretty_print.rs  std.rs
parser/: Cargo.toml  build.rs
parser/benches/: parser.rs
parser/src/: infix.rs  layout.rs  lib.rs  str_suffix.rs  token.rs
parser/tests/: attributes.rs  basic.rs  error_handling.rs  indentation.rs  stack_overflow.rs  types.rs
parser/tests/support/: mod.rs
repl/: Cargo.toml  build.rs
repl/src/: main.rs  repl.rs  repl.rvns
repl/tests/: basic.rs  rexpect.rs
scripts/: before_deploy.sh  publish.sh  sync_publish.sh  travis.sh  version.sh
src/: compiler_pipeline.rs  import.rs  lib.rs  lift_io.rs  query.rs  std_lib.rs
src/std_lib/: env.rs  http.rs  io.rs  process.rs  random.rs  regex.rs
tests/: api.rs  array.rs  compiletest.rs  de.rs  debug.rs  error.rs  inline.rs  io.rs  limits.rs  main.rs  metadata.rs  parallel.rs  pattern_match.rs  row_polymorphism.rs  safety.rs  serialization.rs  skeptic-template.md  skeptic-tests.rs  stack_overflow.rs  tutorial.rs  ui.rs  vm.rs
tests/compile-fail/: get-reference.rs  getable-reference-str.rs  getable-reference.rs  run_expr_str_ref.rs  store-ref.rs
tests/fail/: cyclic_dependency.rvns
tests/support/: mod.rs
vm/: Cargo.toml  build.rs
vm/src/: array.rs  channel.rs  compiler.rs  debug.rs  dynamic.rs  gc.rs  interner.rs  lazy.rs  lib.rs  macros.rs  primitives.rs  reference.rs  serialization.rs  source_map.rs  stack.rs  thread.rs  types.rs  value.rs  vm.rs
vm/src/api/: de.rs  function.rs  json.rs  mac.rs  mod.rs  opaque.rs  record.rs  scoped.rs  ser.rs  typ.rs
vm/src/core/: costs.rs  dead_code.rs  interpreter.rs  mod.rs  optimize.rs  pretty.rs  purity.rs
vm/src/derive/: deserialize.rs  eq.rs  mod.rs  serialize.rs  show.rs
vm/src/gc/: mutex.rs
