[package]
name = "revonslang"
version = "0.18.0" # REVONSLANG
authors = ["Fayssal <fayssalchokri@revons.co>"]
edition = "2020"

license = "MIT"

description = "Basic type definitions and functions for the gluon programming language"

homepage = "http://revonslang.cf"
repository = "https://github.com/bluespacengineers/revonslang"
documentation = "https://docs.rs"

[badges]
travis-ci = { repository = "bluespacengineers/revonslang" }

[dependencies]
bitflags = "1.3.2"
hashbrown = "0.11.2"
log = "0.4.14"
quick-error = "2.0.1"
fnv = "1.0.7"
pretty = "0.10.0"
smallvec = "1.7.0"
collect-mac = "0.1.0"
anymap = { version = "0.12.1", optional = true }
itertools = "0.10.1"
ordered-float = "2.8.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
either = "1.6.1"
vec_map = "0.8.2"
typed-arena = "2.0.1"

gluon_codegen = { version = "0.18.0", path = "../codegen" } # GLUON

serde = { version = "1.0.130", features = ["rc"], optional = true }
serde_state = { version = "0.4.8", features = ["rc"], optional = true }
serde_derive = { version = "1.0.130", optional = true }
serde_derive_state = { version = "0.4.10", optional = true }

# Crates used in testing
compiletest_rs = { version = "0.7.0", optional = true }

[dev-dependencies]
env_logger = "0.9.0"
pretty_assertions = "1.0.0"

[features]
serialization = ["serde", "serde_state", "serde_derive", "serde_derive_state", "anymap"]
nightly = ["compiletest_rs"]
