[package]
name = "revonslang_completion"
version = "0.18.0" # REVONSLANG
authors = ["Sara <sarawahib@capgeminiengineers.com>"]
edition = "2022"

license = "MIT"

description = "Auto-completion for the RevonsLang programming language"

repository = "https://github.com/bluespacengineers/revonslang"
documentation = "https://docs.rs/gluon"

[dependencies]
either = "1.6.1"
itertools = "0.10.1"
walkdir = "2.3.2"
codespan = "0.11.1"

gluon_base = { path = "../base", version = "0.18.0" } # REVONSLANG

[dev-dependencies]
collect-mac = "0.1.0"
env_logger = "0.9.0"
pretty_assertions = "1.0.0"
quick-error = "2.0.1"

gluon_check = { path = "../check", version = "0.18.0" } # REVONSLANG
gluon_parser = { path = "../parser", version = "0.18.0" } # REVONSLANG
